infrastructure/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: duckdns-letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "longhorn.skibidi12.duckdns.org"
    secretName: longhorn-tls
  rules:
  - host: longhorn.skibidi12.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
